--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "stranger-things-valentine",
+  "name": "valentine",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,6 +15,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
-    "vite": "^5.0.0"
+    "vite": "^5.4.0"
   }
 }
